--- a/pagado.html
+++ b/pagado.html
@@ -24,10 +24,8 @@
     /></noscript>
     <!-- End Facebook Pixel Code -->
 
-
 </head>
 <body>
-    
 
     <!-- TU NAVEGADOR -->
 
@@ -38,20 +36,18 @@
     <hr />
 
     <!-- TUS BOTONES -->
-    <button id="registro">
-        Registrarme
+    <button id="verificacion-btn">
+        Contactar
     </button>
 
 
     <!-- CÓDIGO FACEBOOK PIXEL -->
     <script>
 
-    document.getElementById("registro").addEventListener("click", () => {
-         fbq('track', 'Lead');
+    document.getElementById("verificacion-btn").addEventListener("click", () => {
+         fbq('track', 'Contact');
     })
 
     </script>
-
-
 </body>
 </html>
