--- a/carrito.html
+++ b/carrito.html
@@ -6,23 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito | Facebook Pixel - Coursera</title>
 
-    <!-- CÓDIGO FACEBOOK PIXEL-->
-    <!-- Facebook Pixel Code -->
-    <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '508049283798727');
-        fbq('track', 'PageView');
-        </script>
-        <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=508049283798727&ev=PageView&noscript=1"
-        /></noscript>
+ <!-- Facebook Pixel Code -->
+<script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '876687996262759');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=876687996262759&ev=PageView&noscript=1"
+    /></noscript>
     <!-- End Facebook Pixel Code -->
 
 </head>
@@ -33,16 +32,30 @@
 
     <a href="/">Inicio</a>
     <a href="carrito.html">Carrito de compras</a>
+    <a href="pagado.html">Pago realizado</a>
 
     <hr />
 
     <!-- TUS BOTONES -->
-    <button>
+
+    <button id="compra">
         Comprar
     </button>
 
 
     <!-- CÓDIGO FACEBOOK PIXEL -->
+
+    <script>
+        document.getElementById("compra").addEventListener("click", () => {
+              fbq('track', 'Purchase', {
+                  value: 30,
+                  currency: "USD"
+              });
+        })
+    </script>
+    
+
+
 
 </body>
 </html>
